fix overflow

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -10,36 +10,20 @@ body {
   color: #cca37a;
   font-family: 'Sawarabi Mincho', serif;
   background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   /* Standard body background */
 }
 
-.headline {
-  background-color: black;
-  height: 6vh;
-  min-height: 50px;
-  position: fixed;
-  width: 100vw; 
-  top: 0;
-  left: 0;
-  z-index: 30;
-  margin: 0;      
-  padding: 0;     
-  box-sizing: border-box; 
-}
 
-.icon {
-  height: 80%;
-  font-size: calc(16px + 2vh);
-  font-family: 'Dancing Script', cursive;
-  text-align: center;
-  justify-content: left;
-  display: flex;
-  position: relative; /* Updated this line */
-  left: 0; /* Aligns to the left */
-  margin-left: 5px;
-  top: 5px; /* Pushes the icon down by 50px */
-}
 
+
+.dragon {
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .dragon-right {
   position: absolute; margin-right: 50px;
   height: 80%;
@@ -70,15 +54,39 @@ body {
      -1px -1px 0 #ffffff,  /* Left/up shadow */
   /* This will create a bold-like effect */
 }
-
-
+.icon {
+  height: 80%;
+  font-size: calc(16px + 2vh);
+  font-family: 'Dancing Script', cursive;
+  text-align: center;
+  justify-content: left;
+  display: flex;
+  position: relative;
+  left: 0; 
+  background-color: #000000;
+  margin-left: 5px;
+  top: 5px; 
+}
+.headline {
+  background-color: #000000;
+  height: 6vh;
+  min-height: 50px;
+  position: fixed;
+  width: 100vw; 
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  margin: 0;      
+  padding: 0;     
+  box-sizing: border-box; 
+}
 .secondline {
   background: linear-gradient(to bottom, rgb(110, 110, 110) 0%, rgb(255, 255, 255) 100%); /* Gradient from dark gray to white */
-  height: 0.5vh; /* Adjust the thickness of the line */
+  height: 0.5vh; 
   z-index: 1000;
-  width: 100%; /* Ensure the line extends across the full width of the viewport */
-  position: fixed; /* Fix the position to ensure it stays in place as you scroll */
-  top: 6vh; /* Adjust this value based on the actual position you want */
+  width: 100%; 
+  position: fixed; 
+  top: 6vh; 
 }
 
 
@@ -125,9 +133,14 @@ a:hover {
 }
 
 .background {
+  position: fixed;    /* Fixes the position relative to the viewport */
   display: flex;
   flex-direction: column;
-  /* Stack children vertically */
+  top: 7vh;           /* Starts from 7vh from the top */
+  left: 0;            /* Aligns to the left of the viewport */
+  right: 0;           /* Stretches across to the right of the viewport */
+  bottom: 0;          /* Stretches to the bottom of the viewport */
+  overflow-y: auto;   /* Enables vertical scrolling within this container */
 }
 
 @media (max-width: 768px) {
